Fixed Tentabauble text coloring

--- a/public/items/ror2/vanilla/itemManifest.json
+++ b/public/items/ror2/vanilla/itemManifest.json
@@ -1650,7 +1650,7 @@
                     "(s)": "gray"
                 },
                 {
-                    "Corrupts all ": "#D05FB4"
+                    "Corrupts all Chronobaubles": "#D05FB4"
                 }
             ],
             "itemClass": "Void",
